  (if possible) and, especially, not to leak the file descriptors under Unix
- memory leak in wxHTTP fixed (Dimitri)
- fixes to AM_PATH_WXCONFIG autoconf macro
- added wxHashMap class that replaces type-unsafe wxHashTable and is modelled
  after STL hash_map

Unix (Base/GUI):

- wxWindows may be built using BSD and Solaris (and possibly other) make
  programs and not only GNU make

All (GUI):

- wxImage::ComputeHistogram() now uses wxImageHistogram instead of type-unsafe
  wxHashTable
- significantly improved native font support
- added IFF image handler
- fixed using custom renderers in wxGrid which was broken in 2.3.2
- support for multiple images in one file added to wxImage (TIFF and ICO formats)
- support for CUR and ANI files in wxImage added (Chris Elliott)
- wxTextCtrl::GetRange() added
- added wxGetFontFromUser() convenience function

wxMSW:

- small appearance fixes for native look under Windows XP
- refresh the buttons properly when the window is resized (Hans Van Leemputten)
- huge (40*) speed up in wxMask::Create()
- changing wxWindows styles also changes the underlying Windows window style
- fixed flicker in wxTreeCtrl::SetItemXXX()
- fixed redraw problems in dynamically resized wxStaticText
- improvements to wxWindows applications behaviour when the system colours
  are changed
- fixed wxProgressDialog for ranges > 65535
- wxFontEnumerator now returns all fonts, not only TrueType ones
- bugs in handling wxFrame styles (border/caption related) fixed
- showing a dialog from EVT_RADIOBUTTON handler doesn't lead to an infinite
  recursion any more
- wxTextCtrl with wxTE_RICH flag scrolls to the end when text is appended to it
- wxWindowDC and wxClientDC::GetSize() works correctly now

wxGTK:

- wxDirDialog now presents the file system in standard Unix way
- wxButton now honours wxBU_EXACTFIT
- wxStaticBox now honours wxALIGN_XXX styles

wxHTML:

- fixed wxHtmlHelpController's cache files handling on big endian machines