@@ -47,6 +47,9 @@ characters into it than the limit previosuly set with
 which is generated by a menu item.}
 \twocolitem{{\bf EVT\_MENU\_RANGE(id1, id2, func)}}{Process a wxEVT\_COMMAND\_MENU\_RANGE command,
 which is generated by a range of menu items.}
+\twocolitem{{\bf EVT\_CONTEXT\_MENU(func)}}{Process the event generated
+when the user has requested a popup menu to appear by pressing a special
+keyboard key (under Windows) or by right clicking the mouse.}
 \twocolitem{{\bf EVT\_SLIDER(id, func)}}{Process a wxEVT\_COMMAND\_SLIDER\_UPDATED command,
 which is generated by a wxSlider control.}
 \twocolitem{{\bf EVT\_RADIOBOX(id, func)}}{Process a wxEVT\_COMMAND\_RADIOBOX\_SELECTED command,
