@@ -19,21 +19,19 @@ functions that take a wxMenuEvent argument.
 
 \twocolwidtha{7cm}
 \begin{twocollist}\itemsep=0pt
-\twocolitem{{\bf EVT\_MENU\_CHAR(func)}}{Process a wxEVT\_MENU\_CHAR event (a keypress
-when a menu is showing). Windows only; not yet implemented.}
-\twocolitem{{\bf EVT\_MENU\_INIT(func)}}{Process a wxEVT\_MENU\_INIT event (the menu
-is about to pop up). Windows only; not yet implemented.}
-\twocolitem{{\bf EVT\_MENU\_HIGHLIGHT(func)}}{Process a wxEVT\_MENU\_HIGHLIGHT event (a menu
-item is being highlighted). Windows only; not yet implemented.}
-\twocolitem{{\bf EVT\_POPUP\_MENU(func)}}{Process a wxEVT\_POPUP\_MENU event (a menu
-item is being highlighted). Windows only; not yet implemented.}
-\twocolitem{{\bf EVT\_CONTEXT\_MENU(func)}}{Process a wxEVT\_CONTEXT\_MENU event (F1 has
-been pressed with a particular menu item highlighted). Windows only; not yet implemented.}
+\twocolitem{{\bf EVT\_MENU\_OPEN(func)}}{A menu is about to be opened.}
+\twocolitem{{\bf EVT\_MENU\_CLOSE(func)}}{A menu has been just closed.}
+\twocolitem{{\bf EVT\_MENU\_HIGHLIGHT(id, func)}}{The menu item with the
+speicifed id has been highlighted: used to show help prompts in the status bar
+by \helpref{wxFrame}{wxframe}}
+\twocolitem{{\bf EVT\_MENU\_HIGHLIGHT\_ALL(func)}}{A menu item has been
+highlighted, i.e. the currently selected menu item has changed.}
 \end{twocollist}%
 
 \wxheading{See also}
 
-\helpref{wxWindow::OnMenuHighlight}{wxwindowonmenuhighlight}, \helpref{Event handling overview}{eventhandlingoverview}
+\helpref{Command events}{wxcommandevent},\\
+\helpref{Event handling overview}{eventhandlingoverview}
 
 \latexignore{\rtfignore{\wxheading{Members}}}
 
@@ -53,5 +51,16 @@ The relevant menu identifier.
 
 \constfunc{int}{GetMenuId}{\void}
 
-Returns the menu identifier associated with the event.
+Returns the menu identifier associated with the event. This method should be
+only used with the {\tt HIGHLIGHT} events.
+
+\membersection{wxMenuEvent::IsPopup}\label{wxmenueventispopup}
+
+\constfunc{bool}{IsPopup}{\void}
+
+Returns {\tt TRUE} if the menu which is being opened or closed is a popup menu, 
+{\tt FALSE} if it is a normal one.
+
+This method should be only used with the {\tt OPEN} and {\tt CLOSE} events.
+
 
